完成点击电影跳转至电影详情页面；修改doubanAPI：使用Promise代替回调函数

--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/welcome/welcome",
     "pages/posts/posts",
     "pages/posts/posts-detail/posts-detail",
-    "pages/movies/moreMovies/moreMovies"
+    "pages/movies/moreMovies/moreMovies",
+    "pages/movies/movieDetails/movieDetails"
   ],
   "window": {
     "navigationBarBackgroundColor": "#405f80"
