--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.0.4",
-	"appid": "wx48db9146c2d72dff",
+	"appid": "wx62dcedaea1d98f20",
 	"projectname": "MyFirstWechatApp",
 	"debugOptions": {
 		"hidedInDevtools": []
