--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,9 @@
 {
 	"description": "项目配置文件",
 	"packOptions": {
-		"ignore": []
+		"ignore": [
+      {"value": "pics-for-readme", "type": "folder"}
+    ]
 	},
 	"setting": {
 		"urlCheck": false,
